--- a/.gitignore
+++ b/.gitignore
@@ -34,4 +34,7 @@ node_modules
 
 /BugFollowing/app/out/*
 /Mall03/project/out/*
-/Mall03/node/node_modules/*
+/Mall03/project/node/node_modules/*
+
+/AlphaMM/project/out/*
+/AlphaMM/project/node/node_modules/*
