--- a/AlphaMM/project/node/package.json
+++ b/AlphaMM/project/node/package.json
@@ -14,6 +14,7 @@
     "gulp-concat": "^2.6.0",
     "gulp-filter": "^4.0.0",
     "gulp-jade": "^1.1.0",
+    "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.1.1",
     "gulp-uglify": "^1.5.1"
