--- a/Elagance/package.json
+++ b/Elagance/package.json
@@ -15,6 +15,7 @@
     "babel-core": "^6.8.0",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "browser-sync": "^2.12.7",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.0",
@@ -22,6 +23,8 @@
     "gulp-livereload": "^3.8.1",
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.1.1",
+    "react": "^15.0.2",
+    "react-dom": "^15.0.2",
     "webpack": "^1.13.0"
   }
 }
