--- a/Elagance/package.json
+++ b/Elagance/package.json
@@ -24,7 +24,9 @@
     "gulp-plumber": "^1.1.0",
     "gulp-sass": "^2.1.1",
     "react": "^15.0.2",
+    "react-addons": "^0.9.1-deprecated",
     "react-dom": "^15.0.2",
+    "react-router": "^2.4.0",
     "webpack": "^1.13.0"
   }
 }
