--- a/Elagance/package.json
+++ b/Elagance/package.json
@@ -26,7 +26,10 @@
     "react": "^15.0.2",
     "react-addons": "^0.9.1-deprecated",
     "react-dom": "^15.0.2",
+    "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
+    "redux": "^3.5.2",
+    "redux-devtools": "^3.3.1",
     "webpack": "^1.13.0"
   }
 }
