--- a/VueWebpack/package.json
+++ b/VueWebpack/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Webpack配置",
   "scripts": {
-    "dev": "webpack-dev-server --inline",
+    "dev": "webpack --w",
     "test": ""
   },
   "author": "MR03",
@@ -17,6 +17,11 @@
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
     "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "html-webpack-plugin": "^2.19.0",
+    "node-sass": "^3.7.0",
+    "sass-loader": "^3.2.0",
+    "style-loader": "^0.13.1",
     "vue-hot-reload-api": "^1.3.2",
     "vue-html-loader": "^1.2.2",
     "vue-loader": "^8.5.2",
