--- a/VueWebpack/package.json
+++ b/VueWebpack/package.json
@@ -19,6 +19,7 @@
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.19.0",
+    "jquery": "^2.2.4",
     "node-sass": "^3.7.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
