--- a/VueWebpack/package.json
+++ b/VueWebpack/package.json
@@ -3,8 +3,9 @@
   "version": "1.0.0",
   "description": "Webpack配置",
   "scripts": {
+    "wb": "webpack",
     "ww": "webpack --w",
-    "ws": "webpack-dev-server",
+    "ws": "webpack-dev-server --inline",
     "test": ""
   },
   "author": "MR03",
@@ -17,11 +18,14 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "browser-sync": "^2.12.10",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
+    "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.19.0",
     "jquery": "^2.2.4",
     "node-sass": "^3.7.0",
+    "proxy-middleware": "^0.15.0",
     "sass-loader": "^3.2.0",
     "style-loader": "^0.13.1",
     "vue-hot-reload-api": "^1.3.2",
