基本配置完毕,修改一下就可以了

--- a/VueWebpack/package.json
+++ b/VueWebpack/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "Webpack配置",
   "scripts": {
-    "wb": "webpack",
-    "ww": "webpack --w",
-    "ws": "webpack-dev-server --inline",
+    "b": "webpack --progress --colors",
+    "w": "webpack --watch --progress --colors",
+    "s": "webpack-dev-server --inline --progress --colors",
     "test": ""
   },
   "author": "MR03",
@@ -18,12 +18,11 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
-    "browser-sync": "^2.12.10",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
-    "gulp": "^3.9.1",
     "html-webpack-plugin": "^2.19.0",
     "jquery": "^2.2.4",
+    "json-loader": "^0.5.4",
     "node-sass": "^3.7.0",
     "proxy-middleware": "^0.15.0",
     "sass-loader": "^3.2.0",
