--- a/VueWebpack/package.json
+++ b/VueWebpack/package.json
@@ -1,13 +1,14 @@
 {
-  "name": "Webpack-Demo",
+  "name": "VueWebpack-Demo",
   "version": "1.0.0",
-  "description": "Webpack配置",
+  "description": "Vue项目的Webpack配置",
   "scripts": {
-    "b": "webpack --progress --colors",
+    "b": "cross-env NODE_ENV=production webpack --progress --colors --hide-modules --display-error-details",
     "w": "webpack --watch --progress --colors --profile",
     "d": "webpack-dev-server --inline --progress --colors",
     "test": ""
   },
+  "license": "MIT",
   "author": "MR03",
   "dependencies": {
     "vue": "^1.0.24",
@@ -18,6 +19,7 @@
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-runtime": "^6.9.0",
     "babel-preset-es2015": "^6.9.0",
+    "cross-env": "^1.0.8",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.19.0",
